feat: Add workplace suggestions feature with recent search tracking and UI enhancements

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,16 @@
                                 <small id="workplace-help" class="help-text">
                                     회사명의 일부만 입력해도 검색 가능합니다
                                 </small>
+
+                                <!-- 사업장명 제안 버튼들 -->
+                                <div class="workplace-suggestions" id="workplaceSuggestions">
+                                    <div class="suggestions-label">
+                                        <span>인기 사업장:</span>
+                                    </div>
+                                    <div class="suggestions-buttons" id="suggestionsButtons">
+                                        <!-- 버튼들이 JavaScript로 동적으로 추가됩니다 -->
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
