--- a/public/index.html
+++ b/public/index.html
@@ -25,19 +25,19 @@
                         <div class="form-row">
                             <div class="input-group">
                                 <label for="workplaceName" class="input-label">
-                                    사업장명
+                                    사업장명 또는 사업자등록번호
                                     <span class="required-indicator" aria-label="필수 입력">*</span>
                                 </label>
                                 <input
                                     type="text"
                                     id="workplaceName"
                                     class="form-input"
-                                    placeholder="예: 삼성전자, LG전자, 현대자동차"
+                                    placeholder="예: 삼성전자, LG전자, 1234567890"
                                     aria-describedby="workplace-help"
                                     required
                                 />
                                 <small id="workplace-help" class="help-text">
-                                    회사명의 일부만 입력해도 검색 가능합니다
+                                    사업장명 또는 사업자등록번호로 검색할 수 있습니다
                                 </small>
 
                                 <!-- 사업장명 제안 버튼들 -->
@@ -202,6 +202,8 @@
                         <thead>
                             <tr>
                                 <th>기간</th>
+                                <th>사업장명</th>
+                                <th>사업자등록번호</th>
                                 <th>신규입사자</th>
                                 <th>퇴사자</th>
                                 <th>총 인원</th>
@@ -210,7 +212,7 @@
                         </thead>
                         <tbody id="dataTableBody">
                             <tr>
-                                <td colspan="5" class="no-data">데이터를 조회해주세요</td>
+                                <td colspan="7" class="no-data">데이터를 조회해주세요</td>
                             </tr>
                         </tbody>
                     </table>
