feat: Add monthly salary estimation and enhance data display in pension visualization

--- a/public/index.html
+++ b/public/index.html
@@ -221,11 +221,15 @@
                                 <th>퇴사자</th>
                                 <th>총 인원</th>
                                 <th>순 변화</th>
+                                <th>월국민연금금액</th>
+                                <th>개인납부금액</th>
+                                <th>월급여추정</th>
+                                <th>연간급여추정</th>
                             </tr>
                         </thead>
                         <tbody id="dataTableBody">
                             <tr>
-                                <td colspan="7" class="no-data">데이터를 조회해주세요</td>
+                                <td colspan="11" class="no-data">데이터를 조회해주세요</td>
                             </tr>
                         </tbody>
                     </table>
