feat: Add salary estimation chart and enhance chart container styles

--- a/public/index.html
+++ b/public/index.html
@@ -192,9 +192,16 @@
                 <!-- 차트 컨테이너들 -->
                 <div id="chartsContainer">
                     <div class="chart-container">
-                        <h3>시계열 차트</h3>
+                        <h3>시계열 차트 - 인원 변화</h3>
                         <div class="chart-wrapper">
                             <canvas id="timeSeriesChart"></canvas>
+                        </div>
+                    </div>
+
+                    <div class="chart-container">
+                        <h3>급여 추정 차트</h3>
+                        <div class="chart-wrapper">
+                            <canvas id="salaryChart"></canvas>
                         </div>
                     </div>
 
