feat: Add business type identification and display in pension visualization table

--- a/public/index.html
+++ b/public/index.html
@@ -261,6 +261,7 @@
                                     <th>기간</th>
                                     <th>사업장명</th>
                                     <th>사업자등록번호</th>
+                                    <th>사업자유형</th>
                                     <th>신규입사자</th>
                                     <th>퇴사자</th>
                                     <th>총 인원</th>
@@ -273,7 +274,7 @@
                             </thead>
                             <tbody id="dataTableBody">
                                 <tr>
-                                    <td colspan="11" class="no-data">
+                                    <td colspan="12" class="no-data">
                                         <div class="empty-state">
                                             <span class="empty-icon">◇</span>
                                             <span>사업장을 검색해주세요</span>
